# orthoDr-python

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  pc.sh  pt.sh  venv.sh
cpp/: cpp_exports.cpp  gen_solver.cpp  reg_local_solver.cpp  reg_phd_solver.cpp  reg_save_solver.cpp  reg_seff_solver.cpp  reg_sir_solver.cpp  surv_dm_solver.cpp  surv_dn_solver.cpp  surv_forward_solver.cpp  utilities.cpp  utilities.h
cpp/arma_wrapper/: arma_wrapper.h  armadillo_sparse.h  function_wrapper.h
python/: distance.py  helper.py  silverman.py
test/: test.py
